2007-10-02  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention `(ice-9 slib)' fix and threading fix.

2007-09-03  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention alignment-related bug fixes.

2007-09-03  Kevin Ryde  <user42@zip.com.au>

	* configure.in (AC_CHECK_FUNCS): Add clog and cexp.

2007-09-02  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention memory leak fix in `make-socket-address'.

2007-09-01  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention duplicate binding warnings to stderr.

2007-08-23  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention Solaris bug fixes.

2007-08-11  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention SRFI-35 and the new reader.

	* configure.in: Check for <strings.h> and `strncasecmp ()'.

2007-08-08  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention changes to `record-accessor' and
	`record-modifier'.

2007-08-03  Ludovic Courtès  <ludo@gnu.org>

	* configure.in: Use `build-aux' as `AC_CONFIG_AUX_DIR', and `m4'
	as `AC_CONFIG_MACRO_DIR'.  Use Automake's `gnu' and `check-news'
	options.

2007-07-25  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention bug fix for "(set! 'x #f)".

2007-07-18  Ludovic Courtès  <ludo@gnu.org>

	* NEWS: Mention SRFI-37.

2007-07-15  Ludovic Courtès  <ludo@gnu.org>

	Guile 1.8.2 released.

	* NEWS: Mention HP-UX/IA64 build fixes.

	* THANKS: Added people who reported bugs or sent patches since
	1.8.1.  Converted to UTF-8.

	* README: Updated version number.

	* Makefile.am (EXTRA_DIST): Removed `BUGS' (was outdated).

	* ANON-CVS, HACKING, SNAPSHOTS: New, from the `workbook'
	directory of the CVS repository.

	* autogen.sh: Removed dependency on the `workbook' CVS
	directory.

	* GUILE-VERSION (GUILE_MICRO_VERSION): Set to 2.
	(LIBGUILE_INTERFACE_CURRENT): Incremented due to new symbols.
	(LIBGUILE_INTERFACE_REVISION): Set to 0.
	(LIBGUILE_INTERFACE_AGE): Incremented.
	(LIBGUILE_SRFI_SRFI_60_INTERFACE_REVISION): Incremented due to
	bug fixes.

2007-07-11  Ludovic Courtès  <ludo@gnu.org>
