@@ -1,3 +1,12 @@
+2007-10-10  Ludovic Courtès  <ludo@gnu.org>
+
+	* pthread-threads.h (SCM_I_PTHREAD_MUTEX_INITIALIZER): Check
+	`SCM_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER'.
+	* gen-scmconfig.h.in
+	(SCM_I_GSC_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER): New.
+	* gen-scmconfig.c (main): Define
+	`SCM_NEED_BRACES_ON_PTHREAD_MUTEX_INITIALIZER'.
+
 2007-10-02  Ludovic Courtès  <ludo@gnu.org>
 
 	* threads.c (on_thread_exit): Don't call `scm_leave_guile ()'
